# Google-drive-mock

./: CMakeLists.txt  Dockerfile  Dockerfile.ForTests  README.md  docker-compose.yml  package-lock.json
WIKI/: How-To-Use.md  README.md  architecture.md  getting-started.md  troubleshooting.md
src/Clients/: client.cpp  client.py
src/Commands/: AddCommand.cpp  AddCommand.h  Command.h  DeleteCommand.cpp  DeleteCommand.h  GetCommand.cpp  GetCommand.h  SearchCommand.cpp  SearchCommand.h
src/Compression_logic/: RLE.cpp
src/Operations/: DELETE.cpp  add.cpp  get.cpp  search.cpp
src/Server/: server.cpp
src/mobile_app/: Dockerfile  app.json  generate-config.js  package-lock.json  package.json
src/mobile_app/app/: _layout.js  help.js  login.js  recent.js  search.js  settings.js  signup.js  trash.js  uploads.js
src/mobile_app/app/(tabs)/: _layout.js  files.js  home.js  shared.js  starred.js
src/mobile_app/app/folder/: [id].js
src/mobile_app/components/: CreateFileDialog.js  CreateMenu.js  DetailsModal.js  FileActionsMenu.js  FileItem.js  FileList.js  MainButton.js  ProfileMenu.js  ShareModal.js  SideMenu.js  TopBar.js
src/mobile_app/constants/: theme.ts
src/mobile_app/context/: EditorContext.js
src/mobile_app/hooks/: useThemeColor.ts
src/mobile_app/services/: api.js
src/mobile_app/styles/: MainButton.styles.js  Theme.js  createFileDialog.styles.js  createMenu.styles.js  fileActionsMenu.styles.js  fileItem.styles.js  fileList.styles.js  folderView.styles.js  help.styles.js  index.styles.js  login.styles.js  profileMenu.styles.js  settings.styles.js  shareModal.styles.js  sideMenu.styles.js  signup.styles.js  tabs._layout.styles.js  topBar.styles.js
src/mvc_web_server/: Dockerfile  package-lock.json  package.json  server.js
src/mvc_web_server/config/: jwt.js
src/mvc_web_server/controllers/: fileController.js  tokenController.js  userController.js
src/mvc_web_server/models/: File.js  User.js
src/mvc_web_server/routes/: files.js  search.js  tokens.js  users.js
src/mvc_web_server/services/: Client.js
src/mvc_web_server/utils/: idChecker.js  jwtAuth.js  mongo.js
src/my_react_app/: Dockerfile  package-lock.json  package.json
src/my_react_app/public/: index.html
src/my_react_app/src/: App.js  Files.js  Login.js  Signup.js
src/my_react_app/src/components/: FileActionMenu.js  FileBrowser.js  FileDetailsModal.js  FileItem.js  FileList.js  Navbar.js  NewFile.js  SearchBar.js  Settings.js  ShareModal.js  Sidebar.js  Topbar.js
src/my_react_app/src/services/: api.js
src/my_react_app/src/styles/: FileActionMenu.css  FileBrowser.css  FileDetailsModal.css  FileItem.css  FileList.css  Files.css  NewFile.css  (+5 more)
src/project/: project.cpp  project.h
tests/: CMakeLists.txt  Delete_tests.cpp  add_tests.cpp  get_tests.cpp  main.cpp  search_tests.cpp  server_tests.cpp
